=====================================================
VERSION 0.0.7

IN PROGRESS...

+ More tutorials at the beginning of game

=====================================================
VERSION 0.0.6

24.04.2013

+ Generating sprites for planets
* Nice portraits for dialogs made by gerardivn
+ End-game screens, currently with stub art and only with 2 endings.
+ First tutorial dialog (when receiving first damage)
+ Requesting assistance from Klisk race with evacuation

=====================================================
VERSION 0.0.5

27.03.2013

+ Dialogs with options that are visible only in certain conditions (based on game state)
* Fixes of dialog view (multi-line replies)
* Some crashes fixed
+ Dialog listeners
+ New random encounters
+ Encounter with Obliterator ship
+ Weapon test quest
* Gameover after player 3 times returns with not enough data (was 1 time before)

=====================================================
VERSION 0.0.4

07.03.2013

* Nice mountain tiles from anon
+ More life in Solar system - added space station and humanity spaceships with dummy dialogs
* Alien starships will no longer spawn in quest and unique locations, like Solar system.
+ Screen with detailed calculation of research progress upon returning to Earth
+ Added private message system and screen
+ Earth research system. Solar system state changes now based on stuff carried from space by player.
+ Calculating global research score.

======================================================
VERSION 0.0.3

11.02.2013

+ Research projects can now show report screen when finished
+ Research projects can now spawn new projects when they are finished
* Refactored world generation, split into multiple classes
+ Added universal json resource manager for loading game entity descriptions.
+ Added content - some new researches, dialogs, reports and artifacts

======================================================
VERSION 0.0.2

30.01.2013
